# zDNN

./: .gitattributes  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.h.in  config.make.in  config.zdnn  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CODEOWNERS  pull_request_template.md
licenses/: LICENSE-Unity.txt
samples/: README.md  descriptor_share.c  rnn_gru_fwd.c  rnn_lstm_bidir.c  rnn_lstm_fwd.c  rnn_lstm_multi_layers.c  simple_add.c  simple_concat_lstm.c  simple_heap.c  simple_quantized_tensor.c  simple_stack.c  stickify_unstickify.c  ztensor_reuse.c
tests/: Makefile  common_act.h  common_elwise.c  common_elwise.h  common_pool.c  common_pool.h  common_quantization.c  common_quantization.h  common_rnn.c  common_rnn.h  testDriver_available_apis.c  testDriver_convert.c  testDriver_get.c  testDriver_getoffset.c  testDriver_init_ztensor.c  testDriver_logger.c  testDriver_malloc4k.c  testDriver_nnpa_parm_block.c  testDriver_precheck.c  testDriver_query.c  testDriver_reshape_ztensor.c  testDriver_status_diag.c  testDriver_stickify.c  testDriver_stickify_saturation.c  testDriver_tensor_desc.c  testDriver_tensor_verify.c  testDriver_tensor_verify_conv2d.c  testDriver_tensor_verify_lstm_gru.c  testDriver_tensor_verify_pool_avg_max.c  testDriver_tensor_verify_transform.c  testDriver_tensor_verify_zdnn_lstm_gru.c  testDriver_tensordump.c  testDriver_transform_dims.c  testDriver_unstickify.c  testDriver_utils.c  testDriver_version.c  testDriver_version_detect.c  testDriver_zdnn_add_elwise.c  testDriver_zdnn_avgpool2d_maxpool2d_pool.c  testDriver_zdnn_batchnorm.c  (+33 more)
tests/resources/: testresult_parser.py
tests/resources/offset_files/: hwck_1x1x32x64.txt  hwck_1x1x4x127.txt  hwck_1x1x4x128.txt  hwck_1x1x4x129.txt  hwck_1x1x64x4.txt  hwck_1x1x65x4.txt  hwck_1x2x3x4.txt  hwck_1x32x32x3.txt  hwck_2x3x33x129.txt  nchw_1x127x1x4.txt  nchw_1x128x1x4.txt  nchw_1x129x1x4.txt  nchw_1x1x4x4.txt  nchw_1x3x32x32.txt  nchw_1x4x1x63.txt  nchw_1x4x1x64.txt  nchw_1x4x1x65.txt  nchw_1x4x2x3.txt  nchw_1x63x1x32.txt  nchw_1x64x1x31.txt  nchw_1x64x1x32.txt  nchw_1x64x1x33.txt  nchw_1x65x1x32.txt  nchw_2x129x3x33.txt  nhwc_1x1x31x64.txt  nhwc_1x1x32x63.txt  nhwc_1x1x32x65.txt  nhwc_1x1x33x64.txt  nhwc_1x1x63x4.txt  nhwc_2x3x33x129.txt
zdnn/: Makefile  aiu_lstm_gru.c  aiu_ops.c  aiu_quantized_matmul.c  allochelper.c  convert.h  convert_hw.c  get.c  init_ztensor.c  initializer.cpp  logger.c  malloc4k.c  operations.c  query.c  reshape_ztensor.c  status.c  stickify.c  sym_checker.awk  t-gccexpo  t-libsoname  t-listings  t-static  t-symcheck  t-xlcexpo  tensor_desc.c  tensor_dump.c  tensor_verify.c  utils.c  version.c  version.h  zdnn.c  zdnn.h  zdnn.map  zdnn_init.c  zdnn_private.h
